Fixed Sizing issues with projects on small displays
Added functionality to respect large projects properly, by changing all
projects to fit height of largest projects
Also reduced padding around projects to reduce height on mobile devices

Next Steps:
 - Fix state transition between small displays and normal display

--- a/src/components/projects/styles/project.css
+++ b/src/components/projects/styles/project.css
@@ -26,6 +26,10 @@
 	padding: 30px;
 }
 
+.project-container-small {
+	padding: 10px;
+}
+
 .project-logo {
 	width: 30px;
 }
